feat(runtime): add Windows support and generated API docs
Vis-Session: 67acd05c-bd61-460f-8bf1-fcb480280a92